# blockchain

./: .gitignore  Cargo.toml  README.MD
migration/: create.sql  insert.sql
migrations/: 20241223121046_init.down.sql  20241223121046_init.up.sql
src/: lib.rs  main.rs
src/config/: cli.rs  database.rs  mod.rs
src/domain/: block.rs  mod.rs  sqlx_types.rs
src/dto/: block.rs
src/handlers/: error.rs  mod.rs
src/services/: block.rs  eth.rs  mod.rs
src/util/: mod.rs
tests/: tests.rs
tests/handlers/: mod.rs
tests/services/: block.rs
