[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"]}
sha2 = "*"
sqlx = { version = "*", features = ["sqlite", "runtime-tokio"] }
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hex = "*"
log = "0.4"
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["json"] }
