[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"]}
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
alloy = { version = "0.8", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
